Revision history for Perl extension PPI

1.204_01
        Summary:
        - Unicode cleanup and bug fixing
	- Taking the opportunity to do some house cleaning while the
	  code base is relatively stable, before things get crazy again.

	Details:
        - For completeness sake, add support for empty documents
        - Moved capability detection into PPI::Util
	- POD test script now skips on install properly
	- Removed 200 lines of old dead "rawinput" code from PPI::Tokenizer
	- 100% of PPI::Tokenizer is now exception-driven
	- Workaround for "RT#35917 - charsets.t eats all available VM"
	  (unicode bug in 5.8.6, works in 5.8.8)
	- Temporarily disable round-trip testing of 14_charset.t


1.203    Wed 14 May 2008
	Summary:
	- No change, switching to production version

1.202_03 Wed 14 May 2008
	Summary:
	- Initial Perl 6 support
	- Bug fixes and final 1.203 release candidate
	- I finally catch up with all the failing test cases
	  that Chris Dolan keeps commiting :)

	Details:
	- Adding initial support for "use v6-alpha;"
	- Adding new class Perl::Statement::Include::Perl6
	- Adding a test on the KindaPerl6::Grammar,
	  which triggered a bug in the tokenizer during
	  CPAN::Metrics tinderboxing.
	- All open() calls now use three-argument form
	- Upgrading explicit Perl dependency to 5.006,
	  because of the previous item.
	- Better support for labels, including tricky ones like "BEGIN : { ... }"

1.202_02 Wed  2 Jan 2008
	Summary:
	- Back-compatibility and 1.203 release candidate

	Details:
	- Removing the use of use base 'Exporter';
	- Updating Test::SubCalls dep to 1.07 to get
	  the use base 'Exporter' fix for that too.

1.202_01 Tue 20 Nov 2007
	Summary:
	- Minor bug fix release

	Details:
	- RT #30469: calling length() on PPI::Token gives error
	- 14_charsets.t was incorrectly skipping in situations
	  that it should have been running.

1.201    Mon 22 Oct 2007
	Summary:
	- Minor bug fix release

	Details: